--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 100 2009-06-20 10:19:48Z fabriziogiudici $
+ * $Id: pom.xml 112 2009-06-22 12:15:39Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -42,8 +42,7 @@
     
     <artifactId>BetterBeansBinding-core</artifactId>
     <version>1.3.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <!-- packaging>nbm</packaging -->
+    <packaging>nbm</packaging>
     <name>BetterBeansBinding Core</name>
 
     <dependencies>
