--- a/EL/pom.xml
+++ b/EL/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 112 2009-06-22 12:15:39Z fabriziogiudici $
+ * $Id: pom.xml 113 2009-06-22 12:48:56Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -42,7 +42,7 @@
 
     <version>1.3.0-SNAPSHOT</version>
     <artifactId>BetterBeansBinding-EL</artifactId>
-    <packaging>nbm</packaging>
+    <packaging>jar</packaging>
     <name>BetterBeansBinding EL</name>
 
 </project>
