--- a/SwingExamples/src/main/resources/org/jdesktop/beansbinding/swingexamples/resources/SwingExamplesApplication.properties
+++ b/SwingExamples/src/main/resources/org/jdesktop/beansbinding/swingexamples/resources/SwingExamplesApplication.properties
@@ -1,10 +1,10 @@
 # Application global resources
 
 Application.name = DesktopApplication1
-Application.title = Basic Application Example
-Application.version = 1.0
-Application.vendor = Sun Microsystems Inc.
-Application.homepage = http\://appframework.dev.java.net/
+Application.title = BetterBeansBinding Examples
+Application.version = 1.3.0
+Application.vendor = Tidalwave s.a.s.
+Application.homepage = http\://betterbeansbinding.kenai.com
 Application.description = A simple Java desktop application based on Swing Application Framework.
 Application.vendorId = Sun
 Application.id = ${Application.name}
