--- a/SwingExamples/src/main/resources/org/jdesktop/beansbinding/swingexamples/resources/SwingExamplesApplicationAboutBox.properties
+++ b/SwingExamples/src/main/resources/org/jdesktop/beansbinding/swingexamples/resources/SwingExamplesApplicationAboutBox.properties
@@ -2,7 +2,7 @@ title = About: ${Application.title} ${Application.version}
 
 closeAboutBox.Action.text = &Close
 
-appDescLabel.text=<html>${Application.description}
+appDescLabel.text=Examples for the BetterBeansBinding framework.
 
 versionLabel.text=Product Version\:
 
