--- a/SwingExamples/pom.xml
+++ b/SwingExamples/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 118 2009-07-09 09:32:08Z fabriziogiudici $
+ * $Id: pom.xml 123 2009-07-09 12:10:42Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -40,7 +40,7 @@
         <version>1.3.0-SNAPSHOT</version>
     </parent>
     
-    <artifactId>BetterBeansBinding-core</artifactId>
+    <artifactId>BetterBeansBinding-examples</artifactId>
     <version>1.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>BetterBeansBinding Examples</name>
@@ -51,21 +51,31 @@
             <artifactId>BetterBeansBinding-EL</artifactId>
             <version>1.3.0-SNAPSHOT</version>
         </dependency>
-    <dependency>
-      <groupId>net.java.dev.appframework</groupId>
-      <artifactId>appframework</artifactId>
-      <version>1.03</version>
-    </dependency>
-    <dependency>
-      <groupId>org.swinglabs</groupId>
-      <artifactId>swing-worker</artifactId>
-      <version>1.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.swinglabs</groupId>
-      <artifactId>swing-layout</artifactId>
-      <version>1.0.3</version>
-    </dependency>
+        <dependency>
+            <groupId>org.jdesktop.betterbeansbinding</groupId>
+            <artifactId>BetterBeansBinding-SwingBinding</artifactId>
+            <version>1.3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jdesktop.betterbeansbinding</groupId>
+            <artifactId>BetterBeansBinding-BeanExamples</artifactId>
+            <version>1.3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.appframework</groupId>
+            <artifactId>appframework</artifactId>
+            <version>1.03</version>
+        </dependency>
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swing-worker</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swing-layout</artifactId>
+            <version>1.0.3</version>
+        </dependency>
     </dependencies>
 </project>
 
