--- a/SwingBinding/pom.xml
+++ b/SwingBinding/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 113 2009-06-22 12:48:56Z fabriziogiudici $
+ * $Id: pom.xml 124 2009-07-09 12:11:43Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -51,8 +51,16 @@
             <artifactId>BetterBeansBinding-core</artifactId>
             <version>1.3.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.jdesktop.betterbeansbinding</groupId>
+            <artifactId>BetterBeansBinding-BeanExamples</artifactId>
+            <version>1.3.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
+
+
 
 
