--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 120 2009-07-09 10:11:11Z fabriziogiudici $
+ * $Id: pom.xml 127 2009-07-09 12:28:57Z fabriziogiudici $
  *
  ******************************************************************************************************************* --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
@@ -407,6 +407,7 @@
         <module>Core</module>
         <module>EL</module>
         <module>SwingBinding</module>
+        <module>BeanExamples</module>
         <module>SwingExamples</module>
         <!-- module>OneJar</module -->
         <module>CoberturaMerge</module>
