--- a/SwingExamples/pom.xml
+++ b/SwingExamples/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 125 2009-07-09 12:28:16Z fabriziogiudici $
+ * $Id: pom.xml 130 2009-07-09 14:04:35Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -48,7 +48,7 @@
     <dependencies>
         <dependency>
             <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>BetterBeansBinding-EL</artifactId>
+            <artifactId>BetterBeansBinding-core</artifactId>
             <version>1.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
