--- a/EL/pom.xml
+++ b/EL/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 113 2009-06-22 12:48:56Z fabriziogiudici $
+ * $Id: pom.xml 133 2009-07-09 18:06:53Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -36,12 +36,12 @@
 
     <parent>
         <groupId>org.jdesktop.betterbeansbinding</groupId>
-        <artifactId>BetterBeansBinding</artifactId>
+        <artifactId>betterbeansbinding</artifactId>
         <version>1.3.0-SNAPSHOT</version>
     </parent>
 
     <version>1.3.0-SNAPSHOT</version>
-    <artifactId>BetterBeansBinding-EL</artifactId>
+    <artifactId>betterbeansbinding-el</artifactId>
     <packaging>jar</packaging>
     <name>BetterBeansBinding EL</name>
 
