--- a/SwingExamples/pom.xml
+++ b/SwingExamples/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 130 2009-07-09 14:04:35Z fabriziogiudici $
+ * $Id: pom.xml 133 2009-07-09 18:06:53Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -36,11 +36,11 @@
 
     <parent>
         <groupId>org.jdesktop.betterbeansbinding</groupId>
-        <artifactId>BetterBeansBinding</artifactId>
+        <artifactId>betterbeansbinding</artifactId>
         <version>1.3.0-SNAPSHOT</version>
     </parent>
     
-    <artifactId>BetterBeansBinding-examples</artifactId>
+    <artifactId>betterbeansbinding-swingexamples</artifactId>
     <version>1.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>BetterBeansBinding Swing Examples</name>
@@ -48,17 +48,17 @@
     <dependencies>
         <dependency>
             <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>BetterBeansBinding-core</artifactId>
+            <artifactId>betterbeansbinding-core</artifactId>
             <version>1.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>BetterBeansBinding-SwingBinding</artifactId>
+            <artifactId>betterbeansbinding-swingbinding</artifactId>
             <version>1.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>BetterBeansBinding-BeanExamples</artifactId>
+            <artifactId>betterbeansbinding-beanexamples</artifactId>
             <version>1.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
