--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,14 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 127 2009-07-09 12:28:57Z fabriziogiudici $
+ * $Id: pom.xml 133 2009-07-09 18:06:53Z fabriziogiudici $
  *
  ******************************************************************************************************************* --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>org.jdesktop.betterbeansbinding</groupId>
-    <artifactId>BetterBeansBinding</artifactId>
+    <artifactId>betterbeansbinding</artifactId>
     <packaging>pom</packaging>
     <version>1.3.0-SNAPSHOT</version>
     <name>BetterBeansBinding</name>
@@ -409,7 +409,6 @@
         <module>SwingBinding</module>
         <module>BeanExamples</module>
         <module>SwingExamples</module>
-        <!-- module>OneJar</module -->
         <module>CoberturaMerge</module>
   </modules>
 
