--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 133 2009-07-09 18:06:53Z fabriziogiudici $
+ * $Id: pom.xml 134 2009-07-09 18:55:51Z fabriziogiudici $
  *
  ******************************************************************************************************************* --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
@@ -409,7 +409,7 @@
         <module>SwingBinding</module>
         <module>BeanExamples</module>
         <module>SwingExamples</module>
-        <module>CoberturaMerge</module>
+        <!-- module>CoberturaMerge</module -->
   </modules>
 
 </project>
