--- a/SwingExamples/pom.xml
+++ b/SwingExamples/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 133 2009-07-09 18:06:53Z fabriziogiudici $
+ * $Id: pom.xml 135 2009-07-10 06:26:55Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -77,6 +77,19 @@
             <version>1.0.3</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>org.jdesktop.beansbinding.swingexamples.SwingExamplesApplication</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
 
 
