--- a/Examples/BeanExamples/pom.xml
+++ b/Examples/BeanExamples/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 133 2009-07-09 18:06:53Z fabriziogiudici $
+ * $Id: pom.xml 136 2009-07-12 22:55:17Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -36,7 +36,7 @@
 
     <parent>
         <groupId>org.jdesktop.betterbeansbinding</groupId>
-        <artifactId>betterbeansbinding</artifactId>
+        <artifactId>betterbeansbinding-examples</artifactId>
         <version>1.3.0-SNAPSHOT</version>
     </parent>
     
