--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 134 2009-07-09 18:55:51Z fabriziogiudici $
+ * $Id: pom.xml 137 2009-07-12 22:55:59Z fabriziogiudici $
  *
  ******************************************************************************************************************* --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
@@ -407,9 +407,8 @@
         <module>Core</module>
         <module>EL</module>
         <module>SwingBinding</module>
-        <module>BeanExamples</module>
-        <module>SwingExamples</module>
-        <!-- module>CoberturaMerge</module -->
+        <module>Examples/BeanExamples</module>
+        <module>Examples/SwingExamples</module>
   </modules>
 
 </project>
