--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 138 2009-07-13 17:58:38Z fabriziogiudici $
+ * $Id: pom.xml 139 2009-07-13 18:47:31Z fabriziogiudici $
  *
  ******************************************************************************************************************* --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
@@ -260,6 +260,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <debug>true</debug>
+                    <optimize>true</optimize>
                     <source>1.5</source>
                     <target>1.5</target>
                     <showDeprecation>true</showDeprecation>
