--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,10 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 140 2009-07-13 19:30:28Z fabriziogiudici $
+ * $Id: pom.xml 141 2009-07-17 14:08:06Z fabriziogiudici $
  *
- ******************************************************************************************************************* --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+ ******************************************************************************************************************* -->
+ <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     
@@ -115,10 +116,13 @@
         </repository>
     </repositories>
 
+
     <distributionManagement>
         <repository>
-            <id>java.net-m2-repository</id>
-            <url>java-net:/maven2-repository/trunk/repository/</url>
+            <id>maven2-repository.tidalwave.kenai.com</id>
+            <name>Tidalwave Maven Repository</name>
+            <url>file:${tidalwave.maven.repo}</url>
+            <uniqueVersion>false</uniqueVersion>
         </repository>
     </distributionManagement>
 
