--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 141 2009-07-17 14:08:06Z fabriziogiudici $
+ * $Id: pom.xml 142 2009-07-20 13:11:20Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
  <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -116,13 +116,12 @@
         </repository>
     </repositories>
 
-
     <distributionManagement>
         <repository>
             <id>maven2-repository.tidalwave.kenai.com</id>
             <name>Tidalwave Maven Repository</name>
-            <url>file:${tidalwave.maven.repo}</url>
-            <uniqueVersion>false</uniqueVersion>
+            <url>svn:https://kenai.com/svn/tidalwave~maven-repo/2</url>
+            <uniqueVersion>true</uniqueVersion>
         </repository>
     </distributionManagement>
 
