--- a/EL/pom.xml
+++ b/EL/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 133 2009-07-09 18:06:53Z fabriziogiudici $
+ * $Id: pom.xml 143 2009-07-20 13:37:20Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -41,7 +41,7 @@
     </parent>
 
     <version>1.3.0-SNAPSHOT</version>
-    <artifactId>betterbeansbinding-el</artifactId>
+    <artifactId>el</artifactId>
     <packaging>jar</packaging>
     <name>BetterBeansBinding EL</name>
 
