--- a/Examples/BeanExamples/pom.xml
+++ b/Examples/BeanExamples/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 136 2009-07-12 22:55:17Z fabriziogiudici $
+ * $Id: pom.xml 143 2009-07-20 13:37:20Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -36,11 +36,11 @@
 
     <parent>
         <groupId>org.jdesktop.betterbeansbinding</groupId>
-        <artifactId>betterbeansbinding-examples</artifactId>
+        <artifactId>examples</artifactId>
         <version>1.3.0-SNAPSHOT</version>
     </parent>
     
-    <artifactId>betterbeansbinding-beanexamples</artifactId>
+    <artifactId>beanexamples</artifactId>
     <version>1.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>BetterBeansBinding Bean Examples</name>
@@ -48,7 +48,7 @@
     <dependencies>
         <dependency>
             <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>betterbeansbinding-core</artifactId>
+            <artifactId>core</artifactId>
             <version>1.3.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
