--- a/SwingBinding/pom.xml
+++ b/SwingBinding/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 133 2009-07-09 18:06:53Z fabriziogiudici $
+ * $Id: pom.xml 143 2009-07-20 13:37:20Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -40,7 +40,7 @@
         <version>1.3.0-SNAPSHOT</version>
     </parent>
     
-    <artifactId>betterbeansbinding-swingbinding</artifactId>
+    <artifactId>swingbinding</artifactId>
     <version>1.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>BetterBeansBinding SwingBinding</name>
@@ -48,12 +48,12 @@
     <dependencies>
         <dependency>
             <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>betterbeansbinding-core</artifactId>
+            <artifactId>core</artifactId>
             <version>1.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>betterbeansbinding-beanexamples</artifactId>
+            <artifactId>beanexamples</artifactId>
             <version>1.3.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
