--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 144 2009-07-20 14:44:55Z fabriziogiudici $
+ * $Id: pom.xml 145 2009-07-21 12:38:21Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
  <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -121,8 +121,14 @@
             <id>maven2-repository.tidalwave.kenai.com</id>
             <name>Tidalwave Maven Repository</name>
             <url>svn:https://kenai.com/svn/tidalwave~maven-repo/2</url>
-            <uniqueVersion>true</uniqueVersion>
+            <uniqueVersion>false</uniqueVersion>
         </repository>
+        <snapshotRepository>
+            <id>maven2-snapshot-repository.tidalwave.kenai.com</id>
+            <name>Tidalwave Maven Snapshot Repository</name>
+            <url>svn:https://kenai.com/svn/tidalwave~maven-snapshot-repo/2</url>
+            <uniqueVersion>true</uniqueVersion>
+        </snapshotRepository>
     </distributionManagement>
 
     <dependencies>
