--- a/Examples/BeanExamples/pom.xml
+++ b/Examples/BeanExamples/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 143 2009-07-20 13:37:20Z fabriziogiudici $
+ * $Id: pom.xml 149 2009-07-22 00:27:27Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -36,7 +36,7 @@
 
     <parent>
         <groupId>org.jdesktop.betterbeansbinding</groupId>
-        <artifactId>examples</artifactId>
+        <artifactId>betterbeansbinding-examples</artifactId>
         <version>1.3.0-SNAPSHOT</version>
     </parent>
     
@@ -48,7 +48,7 @@
     <dependencies>
         <dependency>
             <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>betterbeansbinding-core</artifactId>
             <version>1.3.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
