--- a/Examples/SwingExamples/pom.xml
+++ b/Examples/SwingExamples/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 143 2009-07-20 13:37:20Z fabriziogiudici $
+ * $Id: pom.xml 149 2009-07-22 00:27:27Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -36,11 +36,11 @@
 
     <parent>
         <groupId>org.jdesktop.betterbeansbinding</groupId>
-        <artifactId>examples</artifactId>
+        <artifactId>betterbeansbinding-examples</artifactId>
         <version>1.3.0-SNAPSHOT</version>
     </parent>
     
-    <artifactId>swingexamples</artifactId>
+    <artifactId>betterbeansbinding-swingexamples</artifactId>
     <version>1.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>BetterBeansBinding Swing Examples</name>
@@ -48,12 +48,12 @@
     <dependencies>
         <dependency>
             <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>betterbeansbinding-core</artifactId>
             <version>1.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jdesktop.betterbeansbinding</groupId>
-            <artifactId>swingbinding</artifactId>
+            <artifactId>betterbeansbinding-swingbinding</artifactId>
             <version>1.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
