--- a/Examples/BeanExamples/pom.xml
+++ b/Examples/BeanExamples/pom.xml
@@ -40,7 +40,6 @@
     </parent>
     
     <artifactId>beanexamples</artifactId>
-    <version>1.3.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>BetterBeansBinding Bean Examples</name>
 
@@ -48,7 +47,7 @@
         <dependency>
             <groupId>it.tidalwave.betterbeansbinding</groupId>
             <artifactId>betterbeansbinding-core</artifactId>
-            <version>1.3.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
