--- a/SwingBinding/pom.xml
+++ b/SwingBinding/pom.xml
@@ -40,7 +40,6 @@
     </parent>
     
     <artifactId>betterbeansbinding-swingbinding</artifactId>
-    <version>1.3.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>BetterBeansBinding SwingBinding</name>
 
@@ -48,12 +47,12 @@
         <dependency>
             <groupId>it.tidalwave.betterbeansbinding</groupId>
             <artifactId>betterbeansbinding-core</artifactId>
-            <version>1.3.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>it.tidalwave.betterbeansbinding</groupId>
             <artifactId>beanexamples</artifactId>
-            <version>1.3.1-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
