Use maven-shade-plugin to create a bundle

--- a/pom.xml
+++ b/pom.xml
@@ -239,6 +239,7 @@
         <module>EL</module>
         <module>SwingBinding</module>
         <module>Examples</module>
+        <module>Bundle</module>
     </modules>
 
     <profiles>
